--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -3,7 +3,7 @@
 
 {% block meta %}
     <meta property="og:title" content="{{ feedback.title }}" />
-    <meta property="og:description" content="{{ feedback.description | raw }}" />
+    <meta property="og:description" content="{{ feedback.description }}" />
     <meta property="og:url" content="{{ absolute_url(path('get_feedback', {'id': (feedback.slug | length > 0) ? feedback.slug : feedback.id})) }}" />
     <meta property="og:image" content="{{ absolute_url(asset('images/icons/' ~ ((feedback.type == 'bug') ? 'bug.png': 'evolution.png'))) }}" />
 {% endblock %}
