--- a/app/Resources/views/admin/game/faction/new.html.twig
+++ b/app/Resources/views/admin/game/faction/new.html.twig
@@ -23,6 +23,10 @@
                 <label for="color">{{ 'game.faction.color' | trans }}</label>
                 <input type="color" name="color" />
             </div>
+            <div class="form-group">
+                <label for="banner">{{ 'game.faction.banner' | trans }}</label>
+                <input type="banner" name="banner" />
+            </div>
             <button class="button success" type="submit">{{ 'game.faction.validate' | trans }}</button>
         </form>
     </div>
