--- a/app/Resources/views/admin/game/faction/new.html.twig
+++ b/app/Resources/views/admin/game/faction/new.html.twig
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label for="banner">{{ 'game.faction.banner' | trans }}</label>
-                <input type="banner" name="banner" />
+                <input id="banner" type="text" name="banner" />
             </div>
             <button class="button success" type="submit">{{ 'game.faction.validate' | trans }}</button>
         </form>
