Update server creation form and server host retrieval logic

--- a/app/Resources/views/admin/game/server/new.html.twig
+++ b/app/Resources/views/admin/game/server/new.html.twig
@@ -50,6 +50,10 @@
                     <input id="started_at" type="date" name="started_at" />
                 </div>
                 <div class="form-group">
+                    <label for="subdomain">{{ 'game.server.subdomain' | trans }}</label>
+                    <input id="subdomain" type="text" name="subdomain" />
+                </div>
+                <div class="form-group">
                     <label for="description">{{ 'game.server.description' | trans }}</label>
                     <textarea id="description" name="description"></textarea>
                 </div>
