--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -35,7 +35,11 @@
         <button type="submit" id="_submit" name="_submit" class="button success">{{ 'security.login.submit'|trans }}</button>
 
         <div class="form-group">
-          <a href={{ path('fos_user_resetting_request') }} class="button warning">{{ 'security.login.forgotten_password'|trans }}</a>
+          <a href="{{ path('fos_user_registration_register') }}" class="button warning">{{ 'registration'|trans }}</a>
+        </div>
+
+        <div class="form-group">
+          <a href="{{ path('fos_user_resetting_request') }}" class="button warning">{{ 'security.login.forgotten_password'|trans }}</a>
         </div>
 
       </form>
