--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,70 +8,67 @@
         {% block meta %}{% endblock %}
         {% block stylesheets %}
             <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}" />
-            <link rel="stylesheet" type="text/css" href="{{ asset('css/menu.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('images/black_logo.png') }}" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
     <body>
-
-		<div class="container">
-			<div class="menu-wrap">
-				<nav class="menu-top">
-					<div class="profile">
-                        <span>
-                            {% if is_granted('ROLE_USER') %}
-                                {{ app.user.username }}
-                                <a href="{{ path('fos_user_security_logout') }}">
-                                    <img src="{{ asset('images/icons/logout.png') }}" />
-                                </a>
-                            {% else %}
-                                {{ 'anonymous' | trans }}
+        <header>
+            <nav>
+                <a href="{{ path('homepage') }}">
+                    <img src="{{ asset('images/white_logo.png') }}" />
+                </a>
+                
+                {% if is_granted('ROLE_ADMIN') and app.request.attributes.get('_route') != 'admin_dashboard' %}
+                    <a href="{{ path('admin_dashboard') }}">
+                        <i class="fas fa-unlock-alt fa-2x mobile"></i>
+                        <span>{{ 'admin.dashboard' | trans }}</span>
+                    </a>
+                {% endif %}
+                {% if is_granted('ROLE_USER') and app.request.attributes.get('_route') != 'dashboard' %}
+                    <a href="{{ path('dashboard') }}">
+                        <i class="fas fa-tachometer-alt fa-2x mobile"></i>
+                        <span>{{ 'user.dashboard' | trans }}</span>
+                    </a>
+                {% endif %}
+            </nav>
+            <nav>
+                {% if is_granted('ROLE_USER') == false %}
+                    <a href="{{ path('fos_user_registration_register') }}">
+                        <i class="fas fa-edit fa-2x mobile"></i>
+                        <span>{{ 'registration' | trans }}</span>
+                    </a>
+                    <a href="{{ path('fos_user_security_login') }}">
+                        <i class="fas fa-tachometer-alt fa-2x mobile"></i>
+                        <span>{{ 'connection' | trans }}</span>
+                    </a>
+                {% else %}
+                    <a href="{{ path('profile') }}">
+                        <i class="fas fa-user fa-2x mobile"></i>
+                        <span>{{ app.user.username }}</span>
+                    </a>
+                    
+                    <a href="#" onclick="toggleNotifications();" id="notifications">
+                        <span class="fa-layers fa-fw fa-2x mobile">
+                            <i class="far fa-bell"></i>
+                            {% if nbNotifications > 0 %}
+                                <span class="fa-layers-counter" style="background:Tomato">{{ nbNotifications }}</span>
                             {% endif %}
                         </span>
-                    </div>
-					<div class="icon-list">
-                        <div id="links-container">
-                            {% if is_granted('ROLE_USER') == false %}
-                                <a href="{{ path('fos_user_registration_register') }}">
-                                    {{ 'registration' | trans }}
-                                </a>
-                                <a href="{{ path('fos_user_security_login') }}">
-                                    {{ 'connection' | trans }}
-                                </a>
-                            {% else %}
-                                <a href="#" onclick="toggleNotifications();" id="notifications">
-                                    <img src="{{ asset('images/icons/notification_white.png') }}" />
-                                    {% if nbNotifications > 0 %}
-                                        <span class="badge">{{ nbNotifications }}</span>
-                                    {% endif %}
-                                </a>
-                            {% endif %}
-                        </div>
-                        <div id="icon-container">
-                            <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/facebook.png') }}" width="32" height="32" alt="Facebook" /> </a>
-                            <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/instagram.png') }}" id="instagram-icon" width="28" height="28" /> </a>
-                            <a href="https://twitter.com/kalaxiagame" class="icon"> <img src="{{ asset('images/icons/social/twitter.png') }}" width="32" height="32" /> </a>
-                            <a href="https://www.linkedin.com/company/11369270/" class="icon"> <img src="{{ asset('images/icons/social/linkedin.png') }}" width="32" height="32" /> </a>
-                            <a href="https://kalaxia.org" class="icon"> <img src="{{ asset('images/icons/social/blogpost.png') }}" width="32" height="32" /> </a>
-                        </div>
-					</div>
-				</nav>
-				<nav class="menu-side">
-					{% if app.request.attributes.get('_route') != 'homepage' %}<a href="{{ path('homepage') }}">{{ 'homepage.title' | trans }}</a>{% endif %}
-                    {% if is_granted('ROLE_ADMIN') and app.request.attributes.get('_route') != 'admin_dashboard' %}<a href="{{ path('admin_dashboard') }}">{{ 'admin.dashboard' | trans }}</a>{% endif %}
-                    {% if is_granted('ROLE_USER') and app.request.attributes.get('_route') != 'dashboard' %}<a href="{{ path('dashboard') }}">{{ 'user.dashboard' | trans }}</a>{% endif %}
-                    {% if is_granted('ROLE_USER') and app.request.attributes.get('_route') != 'profile' %}<a href="{{ path('profile') }}">{{ 'profile.dashboard' | trans }}</a>{% endif %}
-					{% if app.request.attributes.get('_route') != 'project_board' %}<a href="{{ path('project_board') }}">{{ 'project.board' | trans }}</a>{% endif %}
-                </nav>
-			</div>
-			<button class="menu-button" id="open-button">Open Menu</button>
-			<div class="content-wrap">
-				<div class="content">
-                    <div id="page-title"><h1>{% block page_title %}{% endblock %}</h1></div>
-                    {% block body %}{% endblock %}
-                </div>
-            </div>
-        </div>
+                    </a>
+
+                    <a href="{{ path('fos_user_security_logout') }}">
+                        <i class="fas fa-sign-out-alt fa-2x"></i>
+                    </a>
+                {% endif %}
+            </nav>
+        </header>
+        <section>
+            
+        </section>
+        <footer>
+            
+        </footer>
         <div id="notifications-dropdown" class="menu-dropdown">
             {% for notification in notifications %}
                 <div class="notification {{ notification.isRead ? '' : 'unread' }}" data-id="{{ notification.id }}">
@@ -89,10 +86,13 @@
                 </a>
             </footer>
         </div>
+                
+        {% block body %}{% endblock %}
         {% block javascripts %}
             <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/menu.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/notifications.js') }}"></script>
+            <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js" integrity="sha384-kW+oWsYx3YpxvjtZjFXqazFpA7UP/MbiY4jvs+RWZo2+N94PFZ36T6TFkc9O3qoB" crossorigin="anonymous"></script>
         {% endblock %}
     </body>
 </html>
