--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -6,9 +6,6 @@
 {% endblock %}
 
 {% block body %}
-    <div id="logo">
-        <img src="{{ asset('images/logo_typo_white.png') }}">
-    </div>
     <div id="description">
         <h2>{{ 'homepage.description.title' | trans }}</h2>
         <div class="actions">
@@ -16,6 +13,17 @@
             <a href="{{ (is_granted('ROLE_USER')) ? path('dashboard') : path('fos_user_registration_register') }}" class="button success">{{ 'homepage.description.play_game' | trans }}</a>
             <a href="{{ path('project_description') }}" class="button warning">{{ 'homepage.description.read_info' | trans }}</a>
         </div>
+    </div>
+    <div class="social-networks">
+        <header></header>
+        <section>
+            <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/facebook.png') }}" width="32" height="32" alt="Facebook" /> </a>
+            <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/instagram.png') }}" id="instagram-icon" width="28" height="28" /> </a>
+            <a href="https://twitter.com/kalaxiagame" class="icon"> <img src="{{ asset('images/icons/social/twitter.png') }}" width="32" height="32" /> </a>
+            <a href="https://www.linkedin.com/company/11369270/" class="icon"> <img src="{{ asset('images/icons/social/linkedin.png') }}" width="32" height="32" /> </a>
+            <a href="https://kalaxia.org" class="icon"> <img src="{{ asset('images/icons/social/blogpost.png') }}" width="32" height="32" /> </a>
+        </section>
+        <footer></footer>
     </div>
 
     <div id="rss">
