Display current sprint details in homepage

--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -6,33 +6,77 @@
 {% endblock %}
 
 {% block body %}
-    <div id="description">
+    {#<div id="description">
         <h2>{{ 'homepage.description.title' | trans }}</h2>
         <div class="actions">
             <a href="https://discord.gg/mDTms5c" class="button warning">{{ 'homepage.description.join_discord' | trans }}</a>
             <a href="{{ (is_granted('ROLE_USER')) ? path('dashboard') : path('fos_user_registration_register') }}" class="button success">{{ 'homepage.description.play_game' | trans }}</a>
             <a href="{{ path('project_description') }}" class="button warning">{{ 'homepage.description.read_info' | trans }}</a>
         </div>
-    </div>
-    <div class="social-networks">
-        <header></header>
-        <section>
-            <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/facebook.png') }}" width="32" height="32" alt="Facebook" /> </a>
-            <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/instagram.png') }}" id="instagram-icon" width="28" height="28" /> </a>
-            <a href="https://twitter.com/kalaxiagame" class="icon"> <img src="{{ asset('images/icons/social/twitter.png') }}" width="32" height="32" /> </a>
-            <a href="https://www.linkedin.com/company/11369270/" class="icon"> <img src="{{ asset('images/icons/social/linkedin.png') }}" width="32" height="32" /> </a>
-            <a href="https://kalaxia.org" class="icon"> <img src="{{ asset('images/icons/social/blogpost.png') }}" width="32" height="32" /> </a>
-        </section>
-        <footer></footer>
-    </div>
-
-    <div id="rss">
-        <h2> Dernières nouvelles de Kalaxia :) </h2>
-        {% for ticket in tickets %}
-            <div class="ticket">
-                <p> <a href="{{ ticket.link }}"> {{ ticket.title }} </a> ( {{ ticket.date|date('full_date'|trans) }} ) </p>
-                <p> {{ ticket.description|raw }} </p>
-            </div>
-        {% endfor %}
+    </div>#}
+    <div id="container">
+        <div id="current-sprint">
+            <header>
+                <a href="{{ path('sprint_details', {"id": current_sprint.id }) }}">
+                    <h2>Sprint {{ current_sprint.id }}</h2>
+                    <h4>Du [{{ current_sprint.beginAt.format('date' | trans) }}] au [{{ current_sprint.endedAt.format('date' | trans) }}]</h4>
+                </a>
+            </header>
+            <section>
+                {% for user_story in user_stories %}
+                    <div class="user-story">
+                        <header>
+                            <h5>{{ user_story.title }}</h5>
+                            <div class="value">
+                                <i class="fas fa-star"></i>
+                                <span>{{ user_story.value }}</span>
+                            </div>
+                        </header>
+                        <section>
+                            <div class="status {{ user_story.status }}">
+                                {{ ('project.status.' ~ user_story.status) | trans }}
+                            </div>
+                            <div class="estimations">
+                                <div class="spent-time {% if user_story.spentTime > user_story.estimatedTime %}warning{% endif %}">
+                                    <i class="far fa-clock"></i>
+                                    {{ user_story.spentTime }}
+                                </div>
+                                <progress value="{{ user_story.spentTime }}" max="{{ user_story.estimatedTime }}"></progress>
+                                <div class="estimated-time">
+                                    <i class="fas fa-hourglass-start"></i>
+                                    {{ user_story.estimatedTime }}
+                                </div>
+                            </div>
+                        </section>
+                        <footer>
+                        </footer>
+                    </div>
+                {% endfor %}
+            </section>
+            <footer>
+                <a class="button" href="{{ path('sprint_details', {"id": current_sprint.id}) }}">
+                    Voir plus
+                </a>
+            </footer>
+        </div>
+        <div id="social-networks">
+            <header>
+                <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/facebook.png') }}" width="32" height="32" alt="Facebook" /> </a>
+                <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="{{ asset('images/icons/social/instagram.png') }}" id="instagram-icon" width="28" height="28" /> </a>
+                <a href="https://twitter.com/kalaxiagame" class="icon"> <img src="{{ asset('images/icons/social/twitter.png') }}" width="32" height="32" /> </a>
+                <a href="https://www.linkedin.com/company/11369270/" class="icon"> <img src="{{ asset('images/icons/social/linkedin.png') }}" width="32" height="32" /> </a>
+                <a href="https://kalaxia.org" class="icon"> <img src="{{ asset('images/icons/social/blogpost.png') }}" width="32" height="32" /> </a>
+            </header>
+            <section>
+                <h2> Dernières nouvelles de Kalaxia :) </h2>
+                {% for ticket in tickets|slice(0,3) %}
+                    <div class="ticket">
+                        <p> <a href="{{ ticket.link }}"> {{ ticket.title }} </a> ( {{ ticket.date|date('full_date'|trans) }} ) </p>
+                        <p> {{ ticket.description|raw }} </p>
+                    </div>
+                {% endfor %}
+            </section>
+            <footer></footer>
+        </div>
     </div>
 {% endblock %}
