--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -1,38 +1,121 @@
-#logo {
-    text-align:center;
-    padding-top:8%;
-}
-
-#description {
-    margin-top:50px;
-    text-align:center;
-}
-
-#description > .actions {
+#container {
     display: flex;
-    flex-wrap: wrap ;
-    align-items: center;
     justify-content: space-around;
+    margin-top: 50px;
 }
 
-#description > .actions > a {
-    margin-bottom: 8px;
+#current-sprint {
+    flex-basis: 40%;
 }
 
-#rss h2 {
+#current-sprint > header > a {
+    color: #E1BB81;
+    text-decoration: none;
+}
+
+#current-sprint > section > .user-story {
+    margin: 10px 0px;
+    background-color: rgba(0,0,0,0.6);
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+#current-sprint > section > .user-story > header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#current-sprint > section > .user-story > header > .value {
+    display: flex;
+    justify-content: space-between;
+    width: 50px;
+    padding: 5px 10px;
+    background-color: #003C71;
+    border-radius: 5px;
+}
+
+#current-sprint > section > .user-story > header > .value > span {
+    margin-left: 5px;
+}
+
+#current-sprint > section > .user-story > header > h5 {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+#current-sprint > section > .user-story > section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#current-sprint > section > .user-story > section > .status {
+    padding: 5px 10px;
+    background-color: #CC7832;
+    border-radius: 5px;
+}
+
+#current-sprint > section > .user-story > section > .status.to_release {
+    background-color: #08C;
+}
+#current-sprint > section > .user-story > section > .status.done {
+    background-color: green;
+}
+
+#current-sprint > section > .user-story > section > .estimations {
+    display: flex;
+    justify-content: space-between;
+}
+
+#current-sprint > section > .user-story > section > .estimations > .estimated-time {
+    padding: 2px 5px;
+    border-radius: 5px;
+    background-color: #2060A0;
+}
+
+#current-sprint > section > .user-story > section > .estimations > progress {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+#current-sprint > section > .user-story > section > .estimations > .spent-time.warning {
+    background-color: #D00;
+}
+
+#current-sprint > section > .user-story > section > .estimations > .spent-time {
+    padding: 2px 5px;
+    border-radius: 5px;
+    background-color: #2060A0;
+}
+
+#social-networks {
+    flex-basis: 40%;
+}
+
+#social-networks > header {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#social-networks > header > a {
+    text-decoration: none;
+}
+
+#social-networks > section > h2 {
     text-align: center;
 }
 
-#rss a {
-    color: #E1BB81;
+#social-networks > section > .ticket {
+    color: #EFEFEF;
+    border-radius: 10px;
+
+    background: rgba(0,0,0,0.6);
+    
+    margin: 10px;
+    padding: 5px 20px;
 }
 
-.ticket {
-    border: 2px solid #EFEFEF;
-    color: #EFEFEF;
-
-    padding: 5px;
-    margin-left: 7%;
-    margin-right: 7%;
-    margin-top: 2%;
+#social-networks > section > .ticket a {
+    color: #E1BB81;
 }
