Implement homepage link for mobile devices

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -345,7 +345,7 @@ body > footer {
         padding-right: 10px;
     }
     
-    body > header > nav:first-child > a:first-child {
+    body > header > nav:first-child > a:first-child > img {
         display: none;
     }
     
