--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -28,7 +28,7 @@
                 <img src="{{ asset('images/logo.png') }}"/>
                 <span>{{ 'homepage.description.play_game' | trans }}</span>
             </a>
-            <a href="{{ path('project_description') }}">
+            <a href="https://github.com/Kalaxia">
                 <img src="{{ asset('images/icons/github.png') }}"/>
                 <span>{{ 'homepage.description.fork_github' | trans }}</span>
             </a>
