Open external links in new tabs

--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -20,7 +20,7 @@
             <p>{{ 'homepage.description.alpha' | trans }}</p>
         </section>
         <footer>
-            <a href="https://discord.gg/mDTms5c">
+            <a href="https://discord.gg/mDTms5c" target="_blank">
                 <img src="{{ asset('images/icons/discord.png') }}" />
                 <span>{{ 'homepage.description.join_discord' | trans }}</span>
             </a>
@@ -28,7 +28,7 @@
                 <img src="{{ asset('images/logo.png') }}"/>
                 <span>{{ 'homepage.description.play_game' | trans }}</span>
             </a>
-            <a href="https://github.com/Kalaxia">
+            <a href="https://github.com/Kalaxia" target="_blank">
                 <img src="{{ asset('images/icons/github.png') }}"/>
                 <span>{{ 'homepage.description.fork_github' | trans }}</span>
             </a>
